# pessoa

./: .gitignore  NOTICE  README  README.md  main.py  noxfile.py  pyproject.toml  tox.ini
skills/: code-reviewer.md
src/: app.py  chat.py  styles.css  system_prompt.py
src/API/: server.py
src/MCP/: server.py
tests/: __init__.py  test_api_contract.py  test_api_e2e.py  test_api_limits.py  test_mcp.py
