[project]
name = "pessoa"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.2",
    "mem0ai[nlp]>=0.1.0",
    "fastembed>=0.8.0",
    "streamlit>=1.58.0",
    "ddgs>=9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "mcp>=1.0.0",
    "fastmcp>=3.4.2",
]

[project.optional-dependencies]
# Installed only on GPU machines: `uv sync --extra gpu`. vLLM has no Windows
# wheels, hence the platform marker — `uv sync` on Windows simply skips it.
gpu = [
    "vllm>=0.5.0; sys_platform == 'linux'",
]
